# 2d-game-physics-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix
src/: CMakeLists.txt  app.cpp  app.h  app_constraint.cpp  app_constraint.h  app_particle.cpp  app_particle.h  app_rigid_body.cpp  app_rigid_body.h  app_world.cpp  app_world.h  body.cpp  body.h  collision_detection.cpp  collision_detection.h  constants.h  constraint.cpp  constraint.h  contact.cpp  contact.h  force.cpp  force.h  graphics.cpp  graphics.h  main.cpp  matrix_mn.cpp  matrix_mn.h  particle.cpp  particle.h  shape.cpp  shape.h  vec2.cpp  vec2.h  vec_n.cpp  vec_n.h  world.cpp  world.h
